Started adding button functionality. Ensured that scripts waited for the DOM to be fully loaded by wrapping everything in an eventlistener

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,8 +24,13 @@ body
 #display
 {
     margin: 100px 10px 0px 10px;
-    background-color: blue;
+    background-color: #333333;
     max-height: 130px;
+    color: white;
+    text-align: right;
+    padding-top: 25px;
+    padding-right: 10px;
+    font-size: 100px;
 }
 
 #break
@@ -58,11 +63,29 @@ button
     border: none;
     border-radius: 50%;
     margin: 5px 0px 5px 0px;
-    font-size: 35px;
+    font-size: 25px;
+}
+
+.sign1
+{
+    background-color: #a5a5a5;
+    color: black;
+}
+
+.sign2
+{
+    background-color: #fea00a;
+    color: white;
+    font-size: 40px;
+}
+
+.nums
+{
+    background-color: #333333;
+    color: white;
 }
 
 
-
 #zero {
-    background-color:red;
+    min-width: 150px;
 }
